Bug 368255 - Crash on DCC receive
Summary: Crash on DCC receive
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: dcc (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Bernd Buschinski
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-05 08:27 UTC by Eike Hein
Modified: 2016-10-01 19:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2016-09-05 08:27:14 UTC
Application: Konversation (konversation), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f9a61d87940 (LWP 1900))]

Thread 4 (Thread 0x7f9a55642700 (LWP 1905)):
#0  0x00007ffc43d6aa46 in clock_gettime ()
#1  0x00007f9a6dcfb4e6 in clock_gettime () at /lib64/libc.so.6
#2  0x00007f9a6e9a04b1 in qt_gettime() (ts=0x7f9a55641a90, clock=<optimized out>) at tools/qelapsedtimer_unix.cpp:109
#3  0x00007f9a6e9a04b1 in qt_gettime() (frac=<synthetic pointer>, sec=<synthetic pointer>) at tools/qelapsedtimer_unix.cpp:164
#4  0x00007f9a6e9a04b1 in qt_gettime() () at tools/qelapsedtimer_unix.cpp:173
#5  0x00007f9a6eb19299 in QTimerInfoList::updateCurrentTime() (this=0x7f9a4c002cd0) at kernel/qtimerinfo_unix.cpp:91
#6  0x00007f9a6eb1ae35 in timerSourceCheck(GSource*) (src=<optimized out>) at kernel/qeventdispatcher_glib.cpp:146
#7  0x00007f9a6eb1ae35 in timerSourceCheck(GSource*) (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:173
#8  0x00007f9a6785e421 in g_main_context_check () at /lib64/libglib-2.0.so.0
#9  0x00007f9a6785e9a4 in g_main_context_iterate.isra () at /lib64/libglib-2.0.so.0
#10 0x00007f9a6785eb1c in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#11 0x00007f9a6eb1b4db in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f9a4c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#12 0x00007f9a6eac82da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f9a55641c90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#13 0x00007f9a6e8fb74b in QThread::exec() (this=<optimized out>) at thread/qthread.cpp:507
#14 0x00007f9a6e900189 in QThreadPrivate::start(void*) (arg=0x1056690) at thread/qthread_unix.cpp:368
#15 0x00007f9a6c6b35ca in start_thread () at /lib64/libpthread.so.0
#16 0x00007f9a6dcecf6d in clone () at /lib64/libc.so.6

Thread 3 (Thread 0x7f9a56ef2700 (LWP 1903)):
#0  0x00007f9a6dce13ed in poll () at /lib64/libc.so.6
#1  0x00007f9a6785ea06 in g_main_context_iterate.isra () at /lib64/libglib-2.0.so.0
#2  0x00007f9a6785eb1c in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#3  0x00007f9a6eb1b4db in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f9a480008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007f9a6eac82da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f9a56ef1c60, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#5  0x00007f9a6e8fb74b in QThread::exec() (this=this@entry=0x7f9a6ed9ef20 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:507
#6  0x00007f9a6ed2e6c5 in QDBusConnectionManager::run() (this=0x7f9a6ed9ef20 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:196
#7  0x00007f9a6e900189 in QThreadPrivate::start(void*) (arg=0x7f9a6ed9ef20 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:368
#8  0x00007f9a6c6b35ca in start_thread () at /lib64/libpthread.so.0
#9  0x00007f9a6dcecf6d in clone () at /lib64/libc.so.6

Thread 2 (Thread 0x7f9a57e1d700 (LWP 1902)):
#0  0x00007f9a6dce13ed in poll () at /lib64/libc.so.6
#1  0x00007f9a6b367f80 in _xcb_conn_wait () at /lib64/libxcb.so.1
#2  0x00007f9a6b369b79 in xcb_wait_for_event () at /lib64/libxcb.so.1
#3  0x00007f9a5b1fd559 in QXcbEventReader::run() (this=0xfb0490) at qxcbconnection.cpp:1343
#4  0x00007f9a6e900189 in QThreadPrivate::start(void*) (arg=0xfb0490) at thread/qthread_unix.cpp:368
#5  0x00007f9a6c6b35ca in start_thread () at /lib64/libpthread.so.0
#6  0x00007f9a6dcecf6d in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7f9a61d87940 (LWP 1900)):
[KCrash Handler]
#6  0x00007f9a6f459cb2 in QWidget::setEnabled(bool) (this=0x8) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:141
#7  0x00007f9a6f459cb2 in QWidget::setEnabled(bool) (p=...) at ../../include/QtCore/../../src/corelib/global/qglobal.h:980
#8  0x00007f9a6f459cb2 in QWidget::setEnabled(bool) (this=0x0) at ../../include/QtWidgets/../../src/widgets/kernel/qwidget.h:130
#9  0x00007f9a6f459cb2 in QWidget::setEnabled(bool) (this=0x0, enable=enable@entry=true) at kernel/qwidget.cpp:3419
#10 0x00000000005c2f14 in Konversation::DCC::ResumeDialog::updateDialogButtons() (this=this@entry=0x4801830) at /home/eike/devel/src/extragear/network/konversation/src/dcc/resumedialog.cpp:167
#11 0x00000000005c3c45 in Konversation::DCC::ResumeDialog::ResumeDialog(Konversation::DCC::TransferRecv*, QString const&, QString const&, int, QFlags<QDialogButtonBox::StandardButton>, QDialogButtonBox::StandardButton) (this=0x4801830, item=<optimized out>, caption=..., message=..., enabledActions=<optimized out>, enabledButtonCodes=..., defaultButtonCode=QDialogButtonBox::Ok) at /home/eike/devel/src/extragear/network/konversation/src/dcc/resumedialog.cpp:131
#12 0x00000000005c41ac in Konversation::DCC::ResumeDialog::ask(Konversation::DCC::TransferRecv*, QString const&, int, Konversation::DCC::ResumeDialog::ReceiveAction) (item=item@entry=0x48c4010, message=..., enabledActions=25, defaultAction=<optimized out>) at /home/eike/devel/src/extragear/network/konversation/src/dcc/resumedialog.cpp:52
#13 0x00000000005d6261 in Konversation::DCC::TransferRecv::askAndPrepareLocalKio(QString const&, int, Konversation::DCC::ResumeDialog::ReceiveAction, long long) (this=0x48c4010, message=..., enabledActions=<optimized out>, defaultAction=<optimized out>, startPosition=0) at /home/eike/devel/src/extragear/network/konversation/src/dcc/transferrecv.cpp:359
#14 0x00000000005d5d5d in Konversation::DCC::TransferRecv::prepareLocalKio(bool, bool, long long) (this=this@entry=0x48c4010, overwrite=overwrite@entry=false, resume=resume@entry=false, startPosition=startPosition@entry=0) at /home/eike/devel/src/extragear/network/konversation/src/dcc/transferrecv.cpp:317
#15 0x00000000005d616f in Konversation::DCC::TransferRecv::start() (this=0x48c4010) at /home/eike/devel/src/extragear/network/konversation/src/dcc/transferrecv.cpp:296
#16 0x00000000004c2d1d in Server::addDccGet(QString const&, QStringList const&) (this=0x1565d20, sourceNick=..., dccArguments=...) at /home/eike/devel/src/extragear/network/konversation/src/irc/server.cpp:2250
#17 0x000000000061b18e in Server::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=0x1565d20, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /home/eike/devel/build/extragear/network/konversation/src/moc_server.cpp:753
#18 0x00007f9a6eaf48c1 in QObject::event(QEvent*) (this=0x1565d20, e=<optimized out>) at kernel/qobject.cpp:1263
#19 0x00007f9a6f41a8cc in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x1565d20, e=0x48006e0) at kernel/qapplication.cpp:3799
#20 0x00007f9a6f421a51 in QApplication::notify(QObject*, QEvent*) (this=0x7ffc43d1d7f0, receiver=0x1565d20, e=0x48006e0) at kernel/qapplication.cpp:3556
#21 0x00007f9a6eac9d58 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x1565d20, event=event@entry=0x48006e0) at kernel/qcoreapplication.cpp:988
#22 0x00007f9a6eacc3ad in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (event=0x48006e0, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#23 0x00007f9a6eacc3ad in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0xb5bcf0) at kernel/qcoreapplication.cpp:1649
#24 0x00007f9a6eacc818 in QCoreApplication::sendPostedEvents(QObject*, int) (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1503
#25 0x00007f9a6eb1b0b3 in postEventSourceDispatch(GSource*, GSourceFunc, gpointer) (s=0xfe5e90) at kernel/qeventdispatcher_glib.cpp:276
#26 0x00007f9a6785e6ba in g_main_context_dispatch () at /lib64/libglib-2.0.so.0
#27 0x00007f9a6785ea70 in g_main_context_iterate.isra () at /lib64/libglib-2.0.so.0
#28 0x00007f9a6785eb1c in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#29 0x00007f9a6eb1b4bf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x101a4a0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#30 0x00007f9a6eac82da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7ffc43d1d6b0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#31 0x00007f9a6ead03dd in QCoreApplication::exec() () at kernel/qcoreapplication.cpp:1261
#32 0x00007f9a6ee8df8c in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1639
#33 0x00007f9a6f41a825 in QApplication::exec() () at kernel/qapplication.cpp:2975
#34 0x000000000045c438 in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /home/eike/devel/src/extragear/network/konversation/src/main.cpp:162


Reproducible: Always
Comment 1 Peter Simonsson 2016-10-01 19:23:21 UTC
Git commit 5c36950ec0d9d1d2c25ee729a5cd997fd4d8f256 by Peter Simonsson.
Committed on 01/10/2016 at 19:23.
Pushed by psn into branch 'master'.

Don't crash if the retry button doesn't exist in DCC resume dialog

M  +4    -2    src/dcc/resumedialog.cpp

http://commits.kde.org/konversation/5c36950ec0d9d1d2c25ee729a5cd997fd4d8f256