Don't crash if the retry button doesn't exist in DCC resume dialog

BUG:368255